syntax = "proto3";
package api.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/jeffrom/job-manager/pkg/api/v1";


message GenericError {
  string message = 1;
  string resource = 2;
}

message ValidationErrorArg {
  string path = 1;
  string message = 2;
  google.protobuf.Value value = 3;
}

message ValidationErrorResponse {
  repeated ValidationErrorArg errs = 1;
}
